excluding incubation tests